added user models, queries and endpoint
